--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.1
   table_calendar: ^3.0.9
+  firebase_auth: ^4.6.3
 
 dev_dependencies:
   flutter_test:
